# cup

./: CupInfo.py  FileCmd.py  FileUtils.py  NewCmd.py  ProjectInfo.py  README.md  UpdateCmd.py  cup.py  cupinfo.py  file_maker.py  fileutils.py  initcmd.py  movecmd.py  new.py  newcmd.py  project.py  projectconfig.py  projectfile.py  updatecmd.py
cmake/: CMakeLists.txt
config/: test.ini
docs/: cup.html  cup.md  index.html
template/: CupExample.cpp.template  CupExample.h.template  Sample.cpp.template  Sample.h.template  Struct.cpp.template  Struct.h.template  TestCupExample.cpp.template  TestSample.cpp.template  TestStruct.cpp.template  class.h.template  eclipse.cproject.template  eclipse.project.template  project.build.bat.template  project.build.sh.template  project.cmake.template  project.cup.template  project.h.template  project.toml.template  src.cmake.template  src.cpp.template  struct.cpp.template  test.class.cpp.template  test.cmake.template  test.struct.cpp.template  test.testcase.cpp.template
